# rust-tinkering

./: README.md
1.3_hello_cargo/: Cargo.toml
10_generics_traits_and_lifetimes/10.1_generic_data_types/generic_method_definitions/: Cargo.toml
10_generics_traits_and_lifetimes/10.1_generic_data_types/generic_structs/: Cargo.toml
10_generics_traits_and_lifetimes/10.1_generic_data_types/mixing_generics/: Cargo.toml
10_generics_traits_and_lifetimes/10.2_traits/largest_function/: Cargo.toml
10_generics_traits_and_lifetimes/10.2_traits/trait_bounds/: Cargo.toml
10_generics_traits_and_lifetimes/10.2_traits/trait_definition/: Cargo.toml
10_generics_traits_and_lifetimes/10.2_traits/trait_definition/src/: bin.rs  lib.rs
3.2_data_types/character/: Cargo.toml
3.2_data_types/numeric_operations/: Cargo.toml
3.2_data_types/tuple/src/: main.rs
3.3_functions/first_definition/: Cargo.toml
3.3_functions/parameters_single/src/: main.rs
3.3_functions/return_values/: Cargo.toml
3.3_functions/return_values/src/: main.rs
3.3_functions/scopes/: Cargo.toml
3.4_comments/in_line/: Cargo.toml
3.4_comments/separate_line/: Cargo.toml
3.5_control_flow/if_expressions/: Cargo.toml
3.5_control_flow/loops_for/: Cargo.toml
3.5_control_flow/loops_iter/: Cargo.toml
3.5_control_flow/loops_returning/: Cargo.toml
3.5_control_flow/loops_while/: Cargo.toml
data_types/array/: Cargo.toml
data_types/array/src/: main.rs
data_types/boolean/: Cargo.toml
data_types/floating_point/: Cargo.toml
data_types/tuple/: Cargo.toml
variables_and_mutability/shadowing/: Cargo.toml
(+132 files in other folders)
